remove unused files and configurations including auto_review.py, azure-pipelines.yml, demo.py, test_wiki.py, and various standards files

--- a/ai_code_review/examples/javascript-project/azure-pipelines.yml
+++ b/ai_code_review/examples/javascript-project/azure-pipelines.yml
@@ -8,10 +8,10 @@ pr:
   - main
 
 extends:
-  template: https://github.com/gift-is-coding/code-review-with-ai/templates/ai-review.yml
+  template: ../../templates/ai-review.yml
   parameters:
     projectName: 'javascript-project'
-    standardsFile: 'standards/javascript_standards.txt'
+    standardsFile: '../../standards/javascript_standards.txt'
     codeTypes:
       - '.js'
       - '.ts'
