--- a/ai_code_review/examples/java-project/azure-pipelines.yml
+++ b/ai_code_review/examples/java-project/azure-pipelines.yml
@@ -8,10 +8,10 @@ pr:
   - main
 
 extends:
-  template: https://github.com/gift-is-coding/code-review-with-ai/templates/ai-review.yml
+  template: ../../templates/ai-review.yml
   parameters:
     projectName: 'java-project'
-    standardsFile: 'standards/java_standards.txt'
+    standardsFile: '../../standards/java_standards.txt'
     codeTypes:
       - '.java'
       - '.xml'
